# Vanilla-Client

./: .gitignore  README.md  main.py  pyproject.toml
connection/ws_reversed/api/: ActionHandle.py  FileAction.py  GroupAction.py  MessageAction.py  UserAction.py
connection/ws_reversed/event/: EventHandle.py  MessageEvent.py  MetaEvent.py  NoticeEvent.py
dll/: dll-inject.bat  init.txt
initialization/: DataBaseDecrypted.py  env.py  hook.py  hookmsg_server.py  lstep.py  onebot.py  start_ws_reverse_server.py  websocket_reverse_server.py
